fix: styles fixed

--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -116,7 +116,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
           </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Table.TText>{`number | string | undefined`}</Table.TText>
+          <Table.TText>{`string`}</Table.TText>
         </Table.TD>
         <Table.TD>
           <Table.TText>-</Table.TText>
